Form cleanup and optimisation => Added error handling when all conditions are taken on a book => Optimised the handle_next_click algorithm to remove the books from the dom before they are displayed to prevent jumping

--- a/src/Shared Components/Alert/Alert.module.css
+++ b/src/Shared Components/Alert/Alert.module.css
@@ -43,6 +43,7 @@
     justify-content: center;
     align-items: center;
     background-color: white;
+    padding: 0px 5px;
 
 
 }
